--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,54 @@
 * {
-    background-color: #333333;
-    color: #CCCCCC;
+    background-color: #282a36;
+    font-family: Consolas, "Lucida Console", monospace;
+    color: #f8f8f2;
+}
+
+#launch {
+    text-align: center;
+    font-size: 80px;
+    margin-top: 150px;
+}
+
+#entr, #tech, #misc {
+    text-align: center;
+    font-size: 25px;
+}
+
+#title-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.title-item {
+    width: 100%;
+}
+
+#list-container {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-around;
+}
+
+.list-item {
+    display: flex;
+    align-items: baseline;
+    width: 225px;
+}
+
+ul {
+    list-style: none;
+    margin:0px;
+}
+
+a:hover {
+    color: #bd93f9;
+}
+
+#clarissa {
+    bottom: 0;
+    right: 0;
+    position: fixed;
 }
